# ros2_ws

hello_moveit/: CMakeLists.txt  README_分离节点架构.md  README_多按键系统.md  package.xml
hello_moveit/launch/: keyboard_control.launch.py  keyboard_control_simple.launch.py
hello_moveit/msg/: KeyboardState.msg
hello_moveit/scripts/: README.md  analyze_data.py  data_logger.py  position_monitor.py  robot_state_monitor.py  start_monitor.sh  test_trajectory_listener.py
hello_moveit/scripts/robot_data/: end_effector_data_20250618_152003.csv  end_effector_data_20250618_153659.csv  end_effector_data_20250619_172543.csv  joint_data_20250618_152003.csv  joint_data_20250618_153659.csv  joint_data_20250619_172543.csv
hello_moveit/src/: hello_moveit.cpp  keyboard_publisher.cpp  moveit_subscriber.cpp
rml_63_description/: CMakeLists.txt  package.xml  setup.py
rml_63_description/config/: urdf.rviz
rml_63_description/launch/: display.launch.py
rml_63_description/rml_63_description/: __init__.py
rml_63_description/urdf/: rml_63_6fb.urdf
rml_63_moveit/: CMakeLists.txt  package.xml
rml_63_moveit/config/: RML-63-6F.ros2_control.xacro  RML-63-6F.srdf  RML-63-6F.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
rml_63_moveit/launch/: demo.launch.py  display.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
rml_63_servo/: CMakeLists.txt  package.xml
rml_63_servo/config/: rml_63_servo_config.yaml
rml_63_servo/launch/: rml_63_servo_example.launch.py
rml_63_servo/src/: servo_to_real_robot.cpp
